# BioLight

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: .gitignore  1.tif  README.md  gel_functions.py  requirements.txt  visualization.py
phase1_band_first_algorithm/: CMakeLists.txt  README.md  demo.cpp
phase1_band_first_algorithm/src/PlanB/algorithm/: PlanB.cpp
phase1_band_first_algorithm/src/PlanC/algorithm/: PlanC.cpp  PlanCHead.h  SolutionC.cpp
phase1_band_first_algorithm/src/common/: Class.cpp  ClassHead.h
phase2_algorithm_optimization/: README.md
phase3_deep_learning_pilot/: README.md
src/PlanA/algorithm/: PlanA.cpp  PlanAHead.h  SolutionA.cpp
src/PlanB/algorithm/: PlanBHead.h  SolutionB.cpp
src/common/: General.cpp  GeneralHead.h
